syntax = "proto3";
package stayking.stakeibc;

option go_package = "github.com/soohoio/stayking/x/stakeibc/types";

message EpochTracker {
  string epoch_identifier = 1;
  uint64 epoch_number = 2;
  uint64 next_epoch_start_time = 3;
  uint64 duration = 4;
}
