syntax = "proto3";
package stayking.stakeibc;

import "gogoproto/gogo.proto";
import "stayking/stakeibc/params.proto";
import "stayking/stakeibc/host_zone.proto";
import "stayking/stakeibc/epoch_tracker.proto";
// this line is used by starport scaffolding # genesis/proto/import

option go_package = "github.com/soohoio/stayking/v3/x/stakeibc/types";

// GenesisState defines the stakeibc module's genesis state.
message GenesisState {
  Params params = 1 [ (gogoproto.nullable) = false ];
  string port_id = 2;
  // list of zones that are registered by the protocol
  repeated HostZone host_zone_list = 5 [ (gogoproto.nullable) = false ];
  repeated EpochTracker epoch_tracker_list = 10
      [ (gogoproto.nullable) = false ];
  // this line is used by starport scaffolding # genesis/proto/state
  reserved 3, 4, 6, 9, 11;
}
